<resources>
    <string name="app_name">S. R. Citas</string>
    <string name="label_login">Inicio de sesión</string>
    <string name="label_email">Correo</string>
    <string name="label_password">Clave</string>
    <string name="btn_login">Ingresar</string>
    <string name="label_go_to_register">¿Aun no te has registrado?</string>
    <string name="label_regiter">Registro</string>
    <string name="label_name">Nombre completo</string>
    <string name="btn_register">confirmar registro</string>
    <string name="label_go_to_login">¿Ya tienes una cuenta?</string>
    <string name="please_fill_your_register_data">Por favor completa tus datos</string>
    <string name="btn_create_appointment">Reservar cita</string>
    <string name="btn_my_appointment">Mis citas</string>
    <string name="btn_log_out">Cerrar sesión</string>
    <string name="label_welcome">Bienvenido</string>
    <string name="label_create_appointment">Reservar cita</string>
    <string name="label_description">Descripcion</string>
    <string name="label_specialty">Especialidad</string>
    <string name="label_type">Tipo de cita</string>
    <string name="type1">Consulta</string>
    <string name="type2">Examen</string>
    <string name="type3">Operación</string>
    <string name="btn_next">Siguiente</string>
    <string name="label_doctor">Médico</string>
    <string name="label_scheduled_date">Fecha para la cita</string>
    <string name="btn_confirm">"Confrmar"</string>
    <string name="date_format">%1$d-%2$s-%3$s</string>
    <string name="item_appointment_id"> Cita # %1$d</string>
    <string name="item_appointment_date">Atencion para el dia %1$s</string>
    <string name="item_appointment_time"> A las %1s</string>
    <string name="press_back_again">Presione una vez mas para salir</string>
    <string name="validate_appointment_description">La descripcion es demasiado corta</string>
    <string name="label_scheduled_time">Hora de la cita</string>
    <string name="confirm_appointment_data">Dato de la cita</string>
    <string name="error_loading_specialties">Ocurrio un problema al cargar las especialidades</string>
    <string name="error_loading_doctors">Ocurrio un problema al cargar los médicos</string>
    <string name="error_loading_hours">Nose han podido cargar las horas</string>
    <string name="label_select_doctor_and_date">Seleccione un médico y una fecha para ver sus horas disponibles.</string>
    <string name="label_not_available_hours">Lo sentimos no se encontraron horas disponibles para este dia</string>
    <string name="validate_appointment_date">"Es necesario seleccionar una fecha "</string>
    <string name="validate_appointment_time">Es necesario definir una hora para la cita</string>
    <string name="error_login_response">Se octuvo una respuesta inesperada del servidor</string>
    <string name="error_invalid_credentials">Las credenciales son incorrectas</string>
    <string name="error_empty_credentials">Por facor ingrese un correo y contraseña</string>
    <string name="welcome_name">Bienvenido %1$s</string>
    <string name="item_appointment_created_at">Esta cita se registró el dia %1$s con la siguiente descripcion:</string>
    <string name="create_appointments_success">Cita registrada correctamente</string>
    <string name="create_appointments_error">Ocurrio un error inesperado registrando la cita medica</string>
    <string name="label_password_confirmation">Confirmar Clave</string>
    <string name="error_register_empty_fields">Por favor completar todos los campos</string>
    <string name="error_register_password_do_not_match">Las contraseñas no coinciden</string>
    <string name="error_register_password_length">Minimo   6 caracteres la contraseña </string>


</resources>